[package]
name = "krnl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
panic = "unwind"

[profile.release]
debug = true

[dependencies]
earlycon = { path = "../util/earlycon" }
elf = { path = "../util/elf" }
fdt = { path = "../util/fdt" }
rustc-demangle = "0.1"
